--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,8 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: systemdotexit0
-  socket: /var/run/mysqld/mysqld.sock
+  password: password
+  # socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
